# Car-Tracker

./: .gitignore  CARTRACK_components_overview.md  CARTRACK_repo_map_and_glossary.md  Installation Log.txt  Makefile  README.md  STARTUP.md  cartrack_phase1_state.patch  cartrack_phase2_state.patch  cartrack_ui_back_button.patch  package-lock.json
.github/workflows/: ci.yml
Environment Setup Instructions/: README.md  backend_pytest.md  backend_setup.md  frontend_setup.md  test_setup.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_init.py  0002_renewals_and_reminders.py
backend/app/: config.py  db.py  deps.py  enums.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: __init__.py  auth.py  cars.py  households.py  renewals.py  settings.py
backend/cartrack_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_health.py  test_phase2_edge_cases.py  test_phase2_happy_path.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: main.tsx  theme.css
frontend/src/lib/: api.ts  ui.tsx
frontend/src/pages/: CarDetail.tsx  Dashboard.tsx  Household.tsx  Login.tsx  Settings.tsx  Signup.tsx
infra/: .env.example  docker-compose.yml
